- Buffer tabs now show tool tips with the full path of buffers
- Better regexp and ignore case icons (Valery Kondakoff)
- Documentation updates
- HyperSearch no longer keeps all buffers with search results open
- JavaDoc comments (/** */) are now only treated specially in Java mode;
  they have no special meaning in other C-derived languages, such as
  C++, IDL, JavaScript or BeanShell

+ Bug Fixes

- Buffer tabs are now implemented differently, and should work better
- Fixed a very minor memory leak (buffers would sometimes retain pointers
  to closed views' text areas) (since 1.7pre5)
- Docked plugins didn't work (Jason Ginchereau) (since 2.3pre2)
- PostScript token marker didn't handle string literals very well
  (since 2.3pre2)

+ API Changes

- Because of the split pane code, plugins should now add highlighters
  when they receive the ViewUpdate.TEXTAREA_CREATED message, instead of
  ViewUpdate.CREATED as before
- TextAreaPainter.Highlight renamed to TextAreaHighlight -- in the
  future, this interface will be used to paint highlights in the
  gutter
- EBPlugin.getName() removed

* Version 2.3pre2

+ New Features

- File->Current Directory menu lists all files in current directory, selecting
  a file will open it
- To Upper Case, To Lower Case and Select Word actions from TextTools plugin
  moved into the core (TextTools was written by Mike Dillon)
- New Select Line, Select Paragraph actions (mainly useful in macros)
- PostScript syntax highlighting for .ps files (Ralf Engels)
- EditorStarting message sent after jEdit has finished starting up, but
  before first view is created
- EditorExiting message sent when exiting, after plugin stop() methods
  are called, but before user properties, etc are saved
- If enabled in Utilities->Global Options, the buffer list will be kept
  sorted
- You can double-click-drag to extend the selection a word at a time, and
  triple-click-drag to extend it a line at a time
- BufferTabs plugin integrated into the core